# cpp-slack-app

./: .gitignore  .gitmodules  CMakeLists.txt  app_persistent_store.cpp  app_persistent_store.h  app_web_controller.cpp  app_web_controller.h  bot.cpp  bot.h  connection_thread_manager.cpp  connection_thread_manager.h  main.cpp
